--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+uvicorn = "^0.29.0"
+fastapi = {extras = ["all"], version = "^0.111.0"}
+django-environ = "^0.11.2"
+jinja2 = "^3.1.4"
 
 
 [build-system]
