--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
-name = "reliaqueue"
+name = "smo-over-queue"
 version = "0.1.0"
-description = "Имитационное моделирование. Системы массового обслуживания."
+description = ""
 authors = ["triks <trik0001000@gmail.com>"]
 readme = "README.md"
 
@@ -11,6 +11,7 @@ python = "^3.12"
 
 [tool.poetry.group.dev.dependencies]
 prettytable = "^3.10.0"
+bump2version = "^1.0.1"
 
 [build-system]
 requires = ["poetry-core"]
