--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ python = "^3.12"
 [tool.poetry.group.dev.dependencies]
 prettytable = "^3.10.0"
 bump2version = "^1.0.1"
+nose2 = {extras = ["coverage-plugin"], version = "^0.14.2"}
+pretty = "^0.1"
 
 [build-system]
 requires = ["poetry-core"]
