--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,14 @@
 [tool.poetry]
-name = "reliaqueue"
+name = "option-1"
 version = "0.1.0"
-description = "Имитационное моделирование. Системы массового обслуживания."
+description = ""
 authors = ["triks <trik0001000@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+numpy = "^1.26.4"
+pandas = "^2.2.2"
 
 
 [build-system]
