--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "option-1"
+name = "system_reliability"
 version = "0.1.0"
 description = ""
 authors = ["triks <trik0001000@gmail.com>"]
@@ -7,8 +7,6 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-numpy = "^1.26.4"
-pandas = "^2.2.2"
 
 
 [build-system]
