--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ uvicorn = "^0.29.0"
 fastapi = {extras = ["all"], version = "^0.111.0"}
 django-environ = "^0.11.2"
 jinja2 = "^3.1.4"
+pydantic = {extras = ["dotenv"], version = "^2.7.1"}
+system-reliability = "^0.1.0"
 
 
 [build-system]
