--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ uvicorn = "^0.29.0"
 fastapi = {extras = ["all"], version = "^0.111.0"}
 django-environ = "^0.11.2"
 jinja2 = "^3.1.4"
+smo-over-queue = "^0.1.1"
+pdfkit = "^1.0.0"
+system-reliability = "^0.4.0"
 
 
 [build-system]
