--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "reliaqueue"
+name = "reliaqueueererererer"
 version = "0.1.0"
 description = "Имитационное моделирование. Системы массового обслуживания."
 authors = ["triks <trik0001000@gmail.com>"]
@@ -13,7 +13,7 @@ django-environ = "^0.11.2"
 jinja2 = "^3.1.4"
 reportlab = "^4.2.0"
 openpyxl = "^3.1.2"
-smo-rejection = "^0.4.4"
+smo-rejection = "^0.5.6"
 
 
 [build-system]
