--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pdfkit = "^1.0.0"
 reportlab = "^4.2.0"
 openpyxl = "^3.1.2"
 smo-rejection = "^0.5.6"
+system-reliability = "^0.4.0"
 
 
 [build-system]
